Updated names of expert, prevented horizontal scrolling by allowing only two comparison

--- a/css/tv_home.css
+++ b/css/tv_home.css
@@ -221,6 +221,10 @@ table .single-line-info td {
     text-align: start;
 }
 
+table tr td:nth-child(-n+6) {
+    display: none;
+}
+
 /********** Min width 750px **********/
 @media screen and (min-width: 750px) {
 
@@ -351,6 +355,10 @@ table .single-line-info td {
 
     .compare_table {
         width: 100%;
+    }
+
+    table tr td:nth-child(n) {
+        display: table-cell;
     }
 }
 
